# server/routers/stores.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"this/server/controllers"
+	"this/server/middlewares"
 
 	"github.com/gin-gonic/gin"
 )
@@ -9,6 +10,6 @@ import (
 func Stores(engine *gin.Engine) {
 	g := engine.Group("/stores")
 	{
-		g.GET("/list", controllers.GetStoresList)
+		g.GET("/list", middlewares.Auth(), controllers.GetStoresList)
 	}
 }
